# xrootd-cmstfc

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  XrdCmsTfc.cc  XrdCmsTfc.hh  configure  configure.ac
cmake/: FindPcre.cmake  FindXercesC.cmake
spec/: xrootd-cmstfc.spec
src/: N2NVec.cc  N2NVec.hh  XrdCmsTfc.cc  XrdCmsTfc.hh
